Fix: MCPサーバーを相対パスに変更、ポータブル化
- MCPサーバーコードをプロジェクト内に移動 (mcp-server/)
- 相対パスを使用して他デバイスでの動作を可能に
- .gitignoreにnode_modules追加
- MCPサーバー用README追加
- セットアップ手順を更新

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,11 @@ Thumbs.db
 .coverage
 htmlcov/
 
+# Node.js (for MCP server)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # UV lock file (keep this for reproducible builds)
 # uv.lock is included
